--- a/Exercise5/ex5.css
+++ b/Exercise5/ex5.css
@@ -1,7 +1,40 @@
 .container {
     display: grid;
-    grid-template-columns: repeat(3, 1fr 2fr 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 100px);
     background-color: #a9a99b;
     gap: 10px;
     padding: 10px;
+}
+
+.box {
+    background-color: beige;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+}
+
+.box:nth-child(1) {
+    background-color: brown;
+}
+
+.box:nth-child(2) {
+    background-color: rgb(165, 42, 165);
+}
+
+.box:nth-child(3) {
+    background-color: rgb(42, 165, 83);
+}
+
+.box:nth-child(4) {
+    background-color: rgb(42, 75, 165);
+}
+
+.box:nth-child(5) {
+    background-color: rgb(133, 216, 125);
+}
+
+.box:nth-child(6) {
+    background-color: rgb(192, 132, 132);
 }
