--- a/Exercise6/ex6.css
+++ b/Exercise6/ex6.css
@@ -4,11 +4,18 @@
     grid-template-rows: repeat(3, 100px);
     gap: 10px;
     padding: 10px;
-    background-color: rgb(146, 246, 246);
+    background-color: #bfffff;
 }
 
-.box {
-    justify-content: center;
-    align-items: center;
+.container div {
+    background-color: rgb(190, 190, 255);
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+.container .box5 {
+    grid-column: span 2;
+    background-color: rgb(255, 159, 159);
+}
+
